# fishsense-tools

./: .gitignore  README.md  main.py
Gopro-Sync/: README.md  gopro_sync_plots.ipynb  goprosync.py  requirements.txt
Precision_tool/: README.md  main.py
YoutubeData/: 201.txt  203.txt  205.txt  206.txt  208.txt  210.txt  212.txt  213.txt  214.txt  216.txt  218.txt  222.txt  224.txt  225.txt  226.txt  229.txt  231.txt  234.txt  235.txt  236.txt  238.txt  239.txt  240.txt  242.txt  245.txt  246.txt  248.txt  251.txt  252.txt  253.txt  256.txt  260.txt  262.txt  263.txt  265.txt  267.txt  270.txt  272.txt  273.txt  276.txt  (+210 more)
feature-detector/: feature-detector.py  feature_detector.ipynb  pyproject.toml
notebooks/: baseline_disparity_v2.ipynb  baseline_vs_length_error.ipynb  deepwater_exploration_camera_test.ipynb  experiment_error.ipynb  moving_target_and_unsync_error.ipynb
test_prec_YT/: 0.txt  1.txt  10.txt  12.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  133.txt  134.txt  135.txt  136.txt  137.txt  138.txt  141.txt  143.txt  144.txt  147.txt  148.txt  149.txt  150.txt  152.txt  154.txt  155.txt  156.txt  158.txt  159.txt  163.txt  166.txt  17.txt  172.txt  173.txt  174.txt  175.txt  176.txt  18.txt  181.txt  (+202 more)
test_prec_results/: 0001.txt  0007.txt  0008.txt  0011.txt  0019.txt  0023.txt  0025.txt  0040.txt  0043.txt  0045.txt  0049.txt  0055.txt  0066.txt  0070.txt  0073.txt  0074.txt  0076.txt  0077.txt  0080.txt  0084.txt  0091.txt  0096.txt  0098.txt  0101.txt  0105.txt  0108.txt  0109.txt  0111.txt  0115.txt  0117.txt  0125.txt  0130.txt  (+256 more)
(+852 files in other folders)
