[tool.poetry]
name = "feature-detector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "feature_detector"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-contrib-python = "^4.7.0.72"
ipykernel = "^6.23.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
